# C-Shell

./: CMakeLists.txt  README.md  names.txt
integration_tests/: commented_command_tests.sh  exit_command_tests.sh  inputs_comment.txt  inputs_exit.txt  inputs_literal.txt  inputs_multiple.txt  inputs_precedence.txt  inputs_single.txt  inputs_symbolic.txt  multiple_commands_tests.sh  precedence_tests.sh  single_command_tests.sh  test_literal_tests.sh  test_symbolic_tests.sh
prototype/: execute.cpp  parser.cpp  parser.h
src/: andconnector.hpp  base.hpp  commands.hpp  main.cpp  operators.cpp  operators.hpp  orconnector.hpp  parser.cpp  parser.hpp  singlecommand.cpp  singlecommand.hpp  testcommand.cpp  testcommand.hpp
unit_tests/: operators_tests.cpp  parser_tests.cpp  singlecommands_tests.cpp  testcommand_tests.cpp
